# fraud-detection-mlops

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
feature_repo/: definitions.py  feature_store.yaml
infra/grafana/dashboards/: fraud.json
infra/grafana/provisioning/dashboards/: dashboards.yml
infra/prometheus/: prometheus.yml
notebooks/: 00_eda.ipynb
src/fraud_detection_mlops/: __init__.py  config.py
src/fraud_detection_mlops/data/: __init__.py  load.py  split.py
src/fraud_detection_mlops/features/: __init__.py  build.py  encoders.py  graph.py  online.py  velocity.py
src/fraud_detection_mlops/models/: __init__.py  baseline.py  calibrate.py  evaluate.py  offline.py  threshold.py  train_baseline.py  train_offline.py
src/fraud_detection_mlops/monitoring/: __init__.py  demo_drift.py  drift.py  drift_monitor.py  metrics.py
src/fraud_detection_mlops/pipelines/: __init__.py  demo_feedback.py  drift_flow.py  graph_experiment.py  labels.py  promote.py  retrain_flow.py
src/fraud_detection_mlops/serving/: __init__.py  app.py  feature_defs.py  loadtest.py  store.py  verify_parity.py
src/fraud_detection_mlops/streaming/: __init__.py  consumer.py  producer.py  verify.py
tests/: test_drift.py  test_encoders.py  test_feedback.py  test_graph.py  test_online_aggregator.py  test_serving_parity.py  test_velocity.py
