[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fraud-detection-mlops"
version = "0.1.0"
description = "Real-time fraud detection MLOps pipeline (IEEE-CIS) — streaming inference, train/serve parity, feedback loop, drift-triggered retraining."
readme = "README.md"
# CLAUDE.md targets Python 3.11; the local machine runs 3.13. We pin >=3.11 and
# develop on 3.13. Docker (later milestones) will pin 3.11 for parity.
requires-python = ">=3.11"
license = { text = "MIT" }

# M0+M1 modeling dependencies. Streaming/serving/feature-store deps are added in
# their own milestones (M2+), never scaffolded early. Exact versions are frozen
# in requirements.txt for reproducibility (invariant 7).
#   - xgboost: the M1 gradient-boosted model (CLAUDE.md tech stack). CPU-only is
#     fine for tabular fraud; it also handles NaN natively, which matters given
#     the heavy missingness in the C/D/V/identity blocks.
#   - confluent-kafka: the M2 streaming client (Kafka API, talks to Redpanda).
#     Ships a bundled librdkafka wheel, so no system build step.
#   - feast[redis]: the M3 feature store (online=Redis, offline=parquet).
#   - fastapi/uvicorn: the M3 online scoring service. Pinned <0.130 because
#     Prefect 3's embedded server (M4) breaks on FastAPI's 0.137 router API.
#   - prefect: the M4 retraining orchestration.
#   - evidently: M5 feature + prediction drift reports.
#   - prometheus-client: M5 serving + drift metrics for Prometheus/Grafana.
dependencies = [
    "pandas>=2.2",
    "numpy>=2.0",
    "scipy>=1.13",
    "scikit-learn>=1.6",
    "matplotlib>=3.8",
    "xgboost>=2.0",
    "confluent-kafka>=2.3",
    "feast[redis]>=0.40",
    "fastapi>=0.115,<0.130",
    "uvicorn>=0.30",
    "requests>=2.31",
    "prefect>=3.0,<4",
    "evidently>=0.7",
    "prometheus-client>=0.20",
]

[project.optional-dependencies]
dev = [
    "mlflow>=2.15",
    "jupyter>=1.0",
    "nbconvert>=7.16",
    "ipykernel>=6.29",
    "ruff>=0.6",
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
